# FraudDetectionAI

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: app.py  wsgi.py
docker/: Dockerfile.airflow  Dockerfile.api  docker-compose.yml
models/: feature_cols.json  feature_cols_augmented.json
models/anomaly/: anomaly_detector.py
models/ensemble/: fraud_classifier.py
models/rag/: rag_explainer.py
monitoring/: drift_monitor.py
pipeline/: feature_engineering.py
pipeline/airflow/dags/: fraud_detection_dag.py
policies/: fraud_rules.txt
screenshots/: api_health.json  api_model_info.json  api_predict_batch.json  api_predict_clean.json  api_predict_critical.json  api_predict_high.json  api_predict_low.json  api_predict_medium.json
scripts/: generate_synthetic_data.py  take_screenshots.py  train.py
tests/: conftest.py  test_anomaly_detector.py  test_api.py  test_feature_engineering.py
ui/: index.html
